add Model Editing and news

--- a/index.html
+++ b/index.html
@@ -211,6 +211,11 @@
 			<hr>
 			<ul>
 				<li>
+					<strong>[01/2024]&nbsp; <font color="red">New!</font></strong>
+					A paper on model editing for LLMs is available at
+					<b><a href="https://arxiv.org/abs/2401.04700" target="_blank">Preprint</a></b>.
+				</li>
+				<li>
 					<strong>[12/2023]&nbsp; <font color="red">New!</font></strong>
 					I am co-organizing the <b><a href="https://cvpr.thecvf.com/" target="_blank">Tool-Augmented VIsion</a></b>
 					Workshop at <b><a href="https://cvpr.thecvf.com/" target="_blank">CVPR 2024</a></b>. See you in Seattle!
@@ -339,27 +344,27 @@
 					(<b><a href="https://tabmwp.github.io/" target="_blank">PromptPG</a></b>)
 					is accepted to <b>ICLR 2023</b>.
 				</li>
-				<li>
-					<strong>[12/2022]&nbsp; <font color="red">New!</font></strong>
-					A survey paper on deep learning for mathematical reasoning is available at
-					<b><a href="https://arxiv.org/abs/2212.10535" target="_blank">Preprint</a></b>.
-				</li>
-				<li>
-					<strong>[12/2022]&nbsp; <font color="red">New!</font></strong>
-					One paper is accepted to
-					<b><a href="https://knowledge-nlp.github.io/aaai2023/publications.html" target="_blank">AAAI’23 KnowledgeNLP Workshop</a></b> 
-					as an <b><font color="red">Oral Presentation</font></b>.
-				</li>
-				<li>
-					<strong>[12/2022]&nbsp; <font color="red">New!</font></strong>
-					I am excited to join <b><a href="https://www.microsoft.com/en-us/research/" target="_blank">Microsoft Research</a></b>
-					as a research intern!
-					</li>
 			</ul>
 			<div id="content"> 
 				<span id="dots"></span>
 				<span id="more">
 					<ul style="margin-top: -15px">
+						<li>
+							<strong>[12/2022]&nbsp; <font color="red">New!</font></strong>
+							A survey paper on deep learning for mathematical reasoning is available at
+							<b><a href="https://arxiv.org/abs/2212.10535" target="_blank">Preprint</a></b>.
+						</li>
+						<li>
+							<strong>[12/2022]&nbsp; <font color="red">New!</font></strong>
+							One paper is accepted to
+							<b><a href="https://knowledge-nlp.github.io/aaai2023/publications.html" target="_blank">AAAI’23 KnowledgeNLP Workshop</a></b> 
+							as an <b><font color="red">Oral Presentation</font></b>.
+						</li>
+						<li>
+							<strong>[12/2022]&nbsp; <font color="red">New!</font></strong>
+							I am excited to join <b><a href="https://www.microsoft.com/en-us/research/" target="_blank">Microsoft Research</a></b>
+							as a research intern!
+						</li>
 						<li>
 							<strong>[10/2022]&nbsp; <font color="red">New!</font></strong>
 							Happy to receive the <b>NeurIPS 2022 Scholar Award</b>.
@@ -477,6 +482,32 @@
 		<!-- MathVista -->
 		<div class="row">
 			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/arxiv24_modelediting.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<!-- <a href="https://mathvista.github.io/">
+					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
+				</a> -->
+				<b>
+					<font color="black">Model Editing Can Hurt General Abilities of Large Language Modelss</font>
+				</b><br>
+				Jia-Chen Gu, Hao-Xiang Xu, Jun-Yu Ma, <b>Pan Lu</b>, Zhen-Hua Ling, Kai-Wei Chang, Nanyun Peng
+				<br>
+				<b><a href="https://arxiv.org/abs/2401.04700" target="_blank">arXiv:2401.04700&nbsp;</a></b>
+				<!-- <a href="https://mathvista.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a> -->
+				<a href="https://arxiv.org/abs/2401.04700" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://arxiv.org/pdf/2401.04700.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://github.com/JasonForJoy/Model-Editing-Hurt" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://twitter.com/JasonForJoy/status/1744932437006885060" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<!-- <a href="" target="_blank"> <small>[Coverage]&nbsp;</small></a> -->
+				<a href="bibs/arxiv24_modelediting.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div>
+		<hr>
+
+		<!-- MathVista -->
+		<div class="row">
+			<div class="col-md-3">
 				<img class="img-fluid img-rounded" src="imgs/arxiv23_mathvista.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
@@ -490,8 +521,8 @@
 				<br>
 				<b><a href="https://arxiv.org/abs/2310.02255" target="_blank">arXiv:2310.02255&nbsp;</a></b>
 				<a href="https://mathvista.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
-				<a href="https://lupantech.github.io/papers/arxiv23_mathvista.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="https://arxiv.org/pdf/2310.02255.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://arxiv.org/abs/2310.02255" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://lupantech.github.io/papers/arxiv23_mathvista.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
 				<a href="https://github.com/lupantech/MathVista" target="_blank"> <small>[Code]&nbsp;</small></a>
 				<a href="https://huggingface.co/datasets/AI4Math/MathVista" target="_blank"> <small>[Dataset]&nbsp;</small></a>
 				<a href="https://mathvista.github.io/#leaderboard" target="_blank"> <small>[Leaderboard]&nbsp;</small></a>
@@ -499,6 +530,9 @@
 				<a href="https://twitter.com/lupantech/status/1717313355780964608" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="" target="_blank"> <small>[Coverage]&nbsp;</small></a>
 				<a href="bibs/arxiv23_mathvista.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				<a id="best" href="https://cryptorank.io/news/feed/d1046-ais-roblem-solving-examined-with-mathvista" target="_blank">
+					<font color="red"><b>CryptoRank News Feature</b> </font>
+				</a> (29 October 2023) <br>
 			</div>
 		</div>
 		<hr>
@@ -527,8 +561,14 @@
 				<a href="bibs/neurips23_chameleon.txt" target="_blank"> <small>[BibTex]</small></a><br>
 				<a id="best" href="https://alphasignalai.beehiiv.com/p/weeks-top-5-ai-papers?utm_source=alphasignalai.beehiiv.com&utm_medium=newsletter&utm_campaign=this-week-s-top-5-ai-papers" target="_blank">
 					<font color="red"><b>Best Weekly AI Paper</b> </font>
+				</a> (by AlphaSignal, 1st in 1682, 0.06%) <br>
+				<a id="best" href="https://github.com/jacobmarks/awesome-neurips-2023/tree/main" target="_blank">
+					<font color="red"><b>Awesome NeurIPS 2023 Papers</b> </font>
+				</a> (40 in 3584, 0.01%) <br>
+				<a id="best" href="https://medium.com/voxel51/neurips-2023-survival-guide-2f957d5b07c9" target="_blank">
+					<font color="red"><b>NeurIPS 2023 Top 10 Multimodal ML Papers </b> </font>
 				</a>
-				(by AlphaSignal, 1st in 1682, 0.06%)
+
 			</div>
 		</div>
 		<hr>
@@ -554,6 +594,9 @@
 				<a href="https://twitter.com/lupantech/status/1640899600281395200" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="https://twitter.com/_akhaliq/status/1640884275439628288" target="_blank"> <small>[Coverage]&nbsp;</small></a>
 				<a href="bibs/arxiv23_llama.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				<a id="best" href="https://lightning.ai/pages/community/article/understanding-llama-adapters/" target="_blank">
+					<font color="red"><b>LightningAI Blog Feature</b> </font>
+				</a> (14 April 2023) <br>
 			</div>
 		</div>
 		<hr>
@@ -565,7 +608,7 @@
 			</div>
 			<div class="col-md-9">
 				<a href="">
-					<img src="logos/fire.png" id="logo">
+					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
 				</a>
 				<b>
 					<font color="black">SciBench: Evaluating College-Level Scientific Problem-Solving Abilities of Large Language Models</font>
@@ -578,7 +621,11 @@
 				<a href="https://github.com/mandyyyyii/scibench" target="_blank"> <small>[Code]&nbsp;</small></a>
 				<a href="" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="bibs/arxiv23_scibench.txt" target="_blank"> <small>[BibTex]</small></a><br>
-				(*Equal Contribution)
+				(*Equal Contribution)<br>
+				<a id="best" href="https://www.nature.com/articles/d41586-023-03507-3" target="_blank">
+					<font color="red"><b>Nature News Feature</b> </font>
+				</a>
+				(15 November 2023)
 			</div>
 		</div>
 		<hr>
