--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
 		<!-- LLaMA-Adapter-V2 -->
 		<div class="row">
 			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/iclr24_llamav2.png" style="" alt="">
+				<img class="img-fluid img-rounded" src="imgs/arxiv23_llamav2.png" style="" alt="">
 			</div>
 			<div class="col-md-9">
 				<a href="https://github.com/OpenGVLab/LLaMA-Adapter">
@@ -746,14 +746,14 @@
 				<br>
 				<b><a href="https://arxiv.org/abs/2304.15010" target="_blank">arXiv:2304.15010&nbsp;</a></b>
 				<a href="https://arxiv.org/abs/2304.15010" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="papers/iclr24_llamav2.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="papers/arxiv23_llamav2.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
 				<a href="https://github.com/OpenGVLab/LLaMA-Adapter" target="_blank"> <small>[Code]&nbsp;</small></a>
 				<a href="http://llama-adapter.opengvlab.com/" target="_blank"> <small>[Gradio]&nbsp;</small></a>
 				<a href="http://imagebind-llm.opengvlab.com/" target="_blank"> <small>[Gradio-Multimodal]&nbsp;</small></a>
 				<a href="https://twitter.com/lupantech/status/1652022897563795456" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="https://www.youtube.com/watch?v=GAJyWkkSd8M&ab_channel=BruinTech" target="_blank"> <small>[YouTube]&nbsp;</small></a>
 				<!-- <a href="https://twitter.com/_akhaliq/status/1640884275439628288" target="_blank"> <small>[Coverage]&nbsp;</small></a> -->
-				<a href="bibs/iclr24_llamav2.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				<a href="bibs/arxiv23_llamav2.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div>
 		<hr>
