--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
 				<a href="https://twitter.com/lupantech/status/1717313355780964608" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<a href="" target="_blank"> <small>[Coverage]&nbsp;</small></a>
 				<a href="bibs/iclr24_mathvista.txt" target="_blank"> <small>[BibTex]</small></a><br>
-				<a id="best" href="https://cryptorank.io/news/feed/d1046-ais-roblem-solving-examined-with-mathvista" target="_blank">
+				<a id="best" href="" target="_blank">
 					<font color="red"><b>Oral Presentation</b> </font>
 				</a> (85 in 7200+ submissions, 1.2%) <br>
 				<a id="best" href="https://cryptorank.io/news/feed/d1046-ais-roblem-solving-examined-with-mathvista" target="_blank">
