--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
 				<a href="bibs/iclr24_mathvista.txt" target="_blank"> <small>[BibTex]</small></a><br>
 				<a id="best" href="" target="_blank">
 					<font color="red"><b>Oral Presentation</b> </font>
-				</a> (85 in 7200+ submissions, 1.2%) <br>
+				</a> (85 in 7304 submissions, 1.1%) <br>
 				<a id="best" href="https://cryptorank.io/news/feed/d1046-ais-roblem-solving-examined-with-mathvista" target="_blank">
 					<font color="red"><b>CryptoRank News Feature</b> </font>
 				</a> (29 October 2023) <br>
