--- a/index.html
+++ b/index.html
@@ -1370,7 +1370,7 @@
 			<ul>
 				<li>
 					<strong>Co-organizer</strong>, Workshop on
-					<a href="https://cvpr.thecvf.com/Conferences/2024" target="_blank">Tool-Augmented VIsion (TAVI)</a> 
+					<a href="https://sites.google.com/view/tavi-cvpr24/" target="_blank">Tool-Augmented VIsion (TAVI)</a> 
 					at CVPR 2024
 				</li>
 				<li>
