update workshop link

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 				</li>
 				<li>
 					<strong>[12/2023]&nbsp; <font color="red">New!</font></strong>
-					I am co-organizing the <b><a href="https://cvpr.thecvf.com/" target="_blank">Tool-Augmented VIsion</a></b>
+					I am co-organizing the <b><a href="https://sites.google.com/view/tavi-cvpr24/" target="_blank">Tool-Augmented VIsion</a></b>
 					Workshop at <b><a href="https://cvpr.thecvf.com/" target="_blank">CVPR 2024</a></b>. See you in Seattle!
 				</li>
 				<li>
