--- a/index.html
+++ b/index.html
@@ -484,7 +484,36 @@
 		<hr>
 		<!-- <font color="black">(* indicate equal contribution)</font><br><hr> -->
 
-		<!-- MathVista -->
+		<!-- SPHINX-X -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/arxiv24_sphinx.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<!-- <a href="https://mathvista.github.io/">
+					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
+				</a> -->
+				<b>
+					<font color="black">SPHINX-X: Scaling Data and Parameters for a Family of Multi-modal Large Language Models
+					</font>
+				</b><br>
+				Peng Gao, Renrui Zhang, Chris Liu, Longtian Qiu, Siyuan Huang, Weifeng Lin, Shitian Zhao, Shijie Geng, Ziyi Lin, Peng Jin, Kaipeng Zhang, Wenqi Shao, Chao Xu, Conghui He, Junjun He, Hao Shao, <b>Pan Lu</b>, Hongsheng Li, Yu Qiao
+				<br>
+				<b><a href="https://arxiv.org/abs/2402.05935" target="_blank">arXiv:2402.05935&nbsp;</a></b>
+				<!-- <a href="https://mathvista.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a> -->
+				<a href="https://arxiv.org/abs/2402.05935" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://arxiv.org/pdf/2402.05935.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://github.com/Alpha-VLLM/LLaMA2-Accessory" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://llama2-accessory.readthedocs.io/en/latest/" target="_blank"> <small>[Doc]&nbsp;</small></a>
+				<a href="https://huggingface.co/papers/2402.05935" target="_blank"> <small>[Hugging Face]&nbsp;</small></a>
+				<a href="" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="https://twitter.com/_akhaliq/status/1755794618019368978" target="_blank"> <small>[Coverage]&nbsp;</small></a>
+				<a href="bibs/arxiv24_sphinx.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div>
+		<hr>
+		
+		<!-- Model Editing -->
 		<div class="row">
 			<div class="col-md-3">
 				<img class="img-fluid img-rounded" src="imgs/arxiv24_modelediting.png" style="" alt="">
@@ -494,7 +523,7 @@
 					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
 				</a> -->
 				<b>
-					<font color="black">Model Editing Can Hurt General Abilities of Large Language Modelss</font>
+					<font color="black">Model Editing Can Hurt General Abilities of Large Language Models</font>
 				</b><br>
 				Jia-Chen Gu, Hao-Xiang Xu, Jun-Yu Ma, <b>Pan Lu</b>, Zhen-Hua Ling, Kai-Wei Chang, Nanyun Peng
 				<br>
