--- a/index.html
+++ b/index.html
@@ -121,25 +121,25 @@
 				<div class="col-md-12">
 					<br>
 					<p> 
-						I'm currently a fifth-year Ph.D. candidate in the Computer Science Department at UCLA, supervised by  <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">Kai-Wei Chang</a> and <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a>. I am a member of <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">UCLA Natural Language Processing Group</a> and <a href="https://vcla.stat.ucla.edu/" target="_blank">the Center for Vision, Cognition, Learning, and Autonomy</a>.  Previously, I received a Research Master's degree at Tsinghua University, advised by <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. My research has been funded by 
+						I'm currently a final-year Ph.D. candidate in the Computer Science Department at UCLA, supervised by  <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">Kai-Wei Chang</a> and <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a>. I am a member of <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">UCLA Natural Language Processing Group (UCLA NLP)</a> and <a href="https://vcla.stat.ucla.edu/" target="_blank">the Center for Vision, Cognition, Learning, and Autonomy (VCLA)</a>.  Previously, I received a Research Master's degree at Tsinghua University, advised by <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. My research has been funded by 
 						<a href="https://www.sciencehub.ucla.edu/2023-amazon-fellows/" target="_blank">Amazon PhD Fellowship</a>, 
 						Bloomberg PhD Fellowship, 
 						<a href="https://www.qualcomm.com/research/university-relations/innovation-fellowship/2023-north-america" target="_blank">Qualcomm Innovation Fellowship</a>, 
 						<a href="https://grad.ucla.edu/funding/financial-aid/funding-for-continuing-students/dissertation-year-fellowship/" target="_blank">UCLA Dissertation Year Fellowship</a>, 
 						<a href="https://www.darpa.mil/program/explainable-artificial-intelligence" target="_blank">DARPA</a>,
-						<a href="https://vcla.stat.ucla.edu/MURI_Visual_CommonSense/" target="_blank">Naval Research Grant</a>, 
+						<a href="https://vcla.f.ucla.edu/MURI_Visual_CommonSense/" target="_blank">Naval Research Grant</a>, 
 						and NeurIPS Scholar Award.
 
 						<!-- <a href="https://www.darpa.mil/program/explainable-artificial-intelligence" target="_blank">DARPA</a>,
 						<a href="https://vcla.stat.ucla.edu/MURI_Visual_CommonSense/" target="_blank">Naval Research Grant</a> -->
 					</p>
 					<p>
-						My research goal is to build machines that can <strong>reason</strong> and <strong>collaborate</strong> with humans for the common good. My primary research focuses on <strong>machine reasoning</strong> and <strong>trustworthy NLP</strong>, particularly in the domains of mathematics, science, and education:
+						My research goal is to build machines that can <strong>reason</strong> and <strong>collaborate</strong> with humans for the common good. My primary research focuses on <strong>machine reasoning</strong> and <strong>trustworthy NLP</strong>, particularly in the domains of mathematics, science, and medicine:
 					</p>
 					<ul>
 						<li>
-							<strong>Mathematical reasoning</strong> for problem solving, theorem proving, and scientific discovery 
-							<a href="https://mathvista.github.io/" target="_blank">[MathVista]</a>
+							<strong>Mathematical reasoning</strong> for problem solving and theorem proving in educational and academic contexts 
+							<a href="https://mathvista.github.io/" target="_blank">[ICLR-24]</a>
 							<a href="https://arxiv.org/abs/2304.09842" target="_blank">[NeurIPS-23]</a>
 							<a href="https://arxiv.org/abs/2305.12524" target="_blank">[EMNLP-23]</a>
 							<a href="https://arxiv.org/abs/2212.10535" target="_blank">[ACL-23]</a>
@@ -160,12 +160,12 @@
 						</li>
 						<li>
 							<!-- <strong>AI for science and education</strong>, including benchmarks, evaluations, algorithms, and tutoring systems -->
-							<strong>AI for science and education</strong>, including benchmarks, algorithms, and systems
+							<strong>AI for scientific reasoning and discovery</strong>, including benchmarks, algorithms, and systems
 							<a href="https://arxiv.org/abs/2307.10635" target="_blank">[SciBench]</a> 
 							<a href="https://arxiv.org/abs/2304.09842" target="_blank">[NeurIPS-23]</a>
 							<a href="https://arxiv.org/abs/2305.12524" target="_blank">[EMNLP-23]</a>
 							<a href="https://arxiv.org/abs/2209.09513" target="_blank">[NeurIPS-22]</a> 
-							<a href="https://mathai4ed.github.io/" target="_blank">[MathAI4Ed]</a>
+							<a href="https://mathai2023.github.io/" target="_blank">[MATH-AI]</a>
 						</li>
 					</ul>
 					<p>
@@ -173,8 +173,8 @@
 					</p>
 					<ul>
 						<li>
-							<strong>Parameter-efficient instruction tuning</strong> for large language models 
-							<a href="https://github.com/OpenGVLab/LLaMA-Adapter" target="_blank">[LLaMA-Adapter]</a> 
+							<strong>Parameter-efficient instruction tuning</strong> for large language models and large multimodal models
+							<a href="https://github.com/OpenGVLab/LLaMA-Adapter" target="_blank">[ICLR-24]</a> 
 							<a href="https://arxiv.org/abs/2303.16199" target="_blank">[LLaMA-Adapter V2]</a>
 						</li>
 						<li>
@@ -210,6 +210,11 @@
 			<h3 id="News" style="">News</h3>
 			<hr>
 			<ul>
+				<li>
+					<strong>[02/2024]&nbsp; <font color="red">New!</font></strong>
+					A paper on LLMs for advanced quantitative reasoning is available at
+					<b><a href="https://arxiv.org/abs/2402.17644" target="_blank">Preprint</a></b>.
+				</li>
 				<li>
 					<strong>[01/2024]&nbsp; <font color="red">New!</font></strong>
 					Two papers on large multimodal models are accepted to
@@ -343,17 +348,17 @@
 					is available at
 					<b><a href="https://arxiv.org/abs/2303.16199" target="_blank">Preprint</a></b>.
 				</li>
-				<li>
-					<strong>[01/2023]&nbsp; <font color="red">New!</font></strong>
-					One paper on in-context learning for math reasoning
-					(<b><a href="https://tabmwp.github.io/" target="_blank">PromptPG</a></b>)
-					is accepted to <b>ICLR 2023</b>.
-				</li>
 			</ul>
 			<div id="content"> 
 				<span id="dots"></span>
 				<span id="more">
 					<ul style="margin-top: -15px">
+						<li>
+							<strong>[01/2023]&nbsp; <font color="red">New!</font></strong>
+							One paper on in-context learning for math reasoning
+							(<b><a href="https://tabmwp.github.io/" target="_blank">PromptPG</a></b>)
+							is accepted to <b>ICLR 2023</b>.
+						</li>
 						<li>
 							<strong>[12/2022]&nbsp; <font color="red">New!</font></strong>
 							A survey paper on deep learning for mathematical reasoning is available at
@@ -484,6 +489,66 @@
 		<hr>
 		<!-- <font color="black">(* indicate equal contribution)</font><br><hr> -->
 
+		<!-- MathVista -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/iclr24_mathvista.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<a href="https://mathvista.github.io/">
+					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
+				</a>
+				<b>
+					<font color="black">MathVista: Evaluating Mathematical Reasoning of Foundation Models in Visual Contexts</font>
+				</b><br>
+				<b>Pan Lu</b>, Hritik Bansal, Tony Xia, Jiacheng Liu, Chunyuan Li, Hannaneh Hajishirzi, Hao Cheng, Kai-Wei Chang, Michel Galley, Jianfeng Gao
+				<br>
+				<b><a href="https://arxiv.org/abs/2310.02255" target="_blank">ICLR 2024&nbsp;</a></b>
+				<a href="https://mathvista.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="https://arxiv.org/abs/2310.02255" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="papers/iclr24_mathvista.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://github.com/lupantech/MathVista" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://huggingface.co/datasets/AI4Math/MathVista" target="_blank"> <small>[Dataset]&nbsp;</small></a>
+				<a href="https://mathvista.github.io/#leaderboard" target="_blank"> <small>[Leaderboard]&nbsp;</small></a>
+				<a href="https://mathvista.github.io/#visualization" target="_blank"> <small>[Visualize]&nbsp;</small></a>
+				<a href="https://twitter.com/lupantech/status/1717313355780964608" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="" target="_blank"> <small>[Coverage]&nbsp;</small></a>
+				<a href="bibs/iclr24_mathvista.txt" target="_blank"> <small>[BibTex]</small></a><br>
+				<a id="best" href="" target="_blank">
+					<font color="red"><b>Oral Presentation</b> </font>
+				</a> (85 in 7304 submissions, 1.2%) <br>
+				<a id="best" href="https://cryptorank.io/news/feed/d1046-ais-roblem-solving-examined-with-mathvista" target="_blank">
+					<font color="red"><b>CryptoRank News Feature</b> </font>
+				</a> (29 October 2023) <br>
+			</div>
+		</div>
+		<hr>
+
+		<!-- QRData -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/arxiv24_qrdata.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b>
+					<font color="black">
+						Are LLMs Capable of Data-based Statistical and Causal Reasoning? Benchmarking Advanced Quantitative Reasoning with Data
+					</font>
+				</b><br>
+				Xiao Liu, Zirui Wu, Xueqing Wu, <b>Pan Lu</b>, Kai-Wei Chang, Yansong Feng
+				<br>
+				<b><a href="https://arxiv.org/abs/2402.17644" target="_blank">arXiv:2402.17644&nbsp;</a></b>
+				<a href="https://xxxiaol.github.io/QRData/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="https://arxiv.org/abs/2402.17644" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://arxiv.org/pdf/2402.17644.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://github.com/xxxiaol/QRData" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://github.com/xxxiaol/QRData" target="_blank"> <small>[Data]&nbsp;</small></a>
+				<a href="https://twitter.com/xxxxiaol/status/1763061050868674890" target="_blank"> <small>[Twitter]&nbsp;</small></a>
+				<a href="bibs/arxiv24_qrdata.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div>
+		<hr>
+
 		<!-- SPHINX-X -->
 		<div class="row">
 			<div class="col-md-3">
@@ -535,41 +600,6 @@
 				<a href="https://twitter.com/JasonForJoy/status/1744932437006885060" target="_blank"> <small>[Twitter]&nbsp;</small></a>
 				<!-- <a href="" target="_blank"> <small>[Coverage]&nbsp;</small></a> -->
 				<a href="bibs/arxiv24_modelediting.txt" target="_blank"> <small>[BibTex]</small></a><br>
-			</div>
-		</div>
-		<hr>
-
-		<!-- MathVista -->
-		<div class="row">
-			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/iclr24_mathvista.png" style="" alt="">
-			</div>
-			<div class="col-md-9">
-				<a href="https://mathvista.github.io/">
-					<img src="logos/fire.png" id="logo"><img src="logos/fire.png" id="logo">
-				</a>
-				<b>
-					<font color="black">MathVista: Evaluating Mathematical Reasoning of Foundation Models in Visual Contexts</font>
-				</b><br>
-				<b>Pan Lu</b>, Hritik Bansal, Tony Xia, Jiacheng Liu, Chunyuan Li, Hannaneh Hajishirzi, Hao Cheng, Kai-Wei Chang, Michel Galley, Jianfeng Gao
-				<br>
-				<b><a href="https://arxiv.org/abs/2310.02255" target="_blank">ICLR 2024&nbsp;</a></b>
-				<a href="https://mathvista.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
-				<a href="https://arxiv.org/abs/2310.02255" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="papers/iclr24_mathvista.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
-				<a href="https://github.com/lupantech/MathVista" target="_blank"> <small>[Code]&nbsp;</small></a>
-				<a href="https://huggingface.co/datasets/AI4Math/MathVista" target="_blank"> <small>[Dataset]&nbsp;</small></a>
-				<a href="https://mathvista.github.io/#leaderboard" target="_blank"> <small>[Leaderboard]&nbsp;</small></a>
-				<a href="https://mathvista.github.io/#visualization" target="_blank"> <small>[Visualize]&nbsp;</small></a>
-				<a href="https://twitter.com/lupantech/status/1717313355780964608" target="_blank"> <small>[Twitter]&nbsp;</small></a>
-				<a href="" target="_blank"> <small>[Coverage]&nbsp;</small></a>
-				<a href="bibs/iclr24_mathvista.txt" target="_blank"> <small>[BibTex]</small></a><br>
-				<a id="best" href="" target="_blank">
-					<font color="red"><b>Oral Presentation</b> </font>
-				</a> (85 in 7304 submissions, 1.2%) <br>
-				<a id="best" href="https://cryptorank.io/news/feed/d1046-ais-roblem-solving-examined-with-mathvista" target="_blank">
-					<font color="red"><b>CryptoRank News Feature</b> </font>
-				</a> (29 October 2023) <br>
 			</div>
 		</div>
 		<hr>
@@ -1265,7 +1295,7 @@
 		<hr>
 		<ul>
 			<li>
-				<strong>University of California, Los Angeles</strong>, 2019 - Present<br>
+				<strong>University of California, Los Angeles</strong>, 2019 - 2024<br>
 				Ph.D. Student in Computer Science
 			</li>
 			<li>
@@ -1274,7 +1304,7 @@
 			</li>
 			<li>
 				<strong>Beijing Institute of Technology</strong>, 2011 - 2015<br>
-				B.S. in Electrical Engineering
+				B.S. in Electrical Engineering (Automation)
 			</li>
 		</ul>
 	</div><br>
@@ -1286,7 +1316,7 @@
 		<hr>
 		<ul>
 			<li>
-				<strong>Research Intern</strong>, <em>Microsoft Research</em>, 2022.12 - Present <br>
+				<strong>Research Intern</strong>, <em>Microsoft Research</em>, 2022.12 - 2023.12 <br>
 				Mentors: 
 				Dr. <a href="https://sites.google.com/site/hcheng2site" target="_blank">Hao Cheng</a>,
 				<!-- Dr. <a href="https://www.microsoft.com/en-us/research/people/bapeng/" target="_blank">Baolin Peng</a>, -->
@@ -1426,7 +1456,7 @@
 			</ul>
 			<h4 id="Service" style="">Program Committee Member</h4>
 				<ul>
-					<li> <strong>2024</strong>: ICLR, CVPR, ARR</li>
+					<li> <strong>2024</strong>: ICLR, CVPR, COLM, ARR, SIGKDD</li>
 					<li> <strong>2023</strong>: NeurIPS, ICLR, ACL, EMNLP, AAAI</li>
 					<li> <strong>2022</strong>: NeurIPS, ICLR, CVPR, AAAI,
 						COLING</li>
