--- a/index.html
+++ b/index.html
@@ -211,6 +211,11 @@
 			<hr>
 			<ul>
 				<li>
+					<strong>[03/2024]&nbsp; <font color="red">New!</font></strong>
+					A paper on visual math reasoning with Multi-modal LLMs is available at
+					<b><a href="https://arxiv.org/abs/2403.14624" target="_blank">Preprint</a></b>.
+				</li>
+				<li>
 					<strong>[02/2024]&nbsp; <font color="red">New!</font></strong>
 					A paper on LLMs for advanced quantitative reasoning is available at
 					<b><a href="https://arxiv.org/abs/2402.17644" target="_blank">Preprint</a></b>.
@@ -520,6 +525,33 @@
 				<a id="best" href="https://cryptorank.io/news/feed/d1046-ais-roblem-solving-examined-with-mathvista" target="_blank">
 					<font color="red"><b>CryptoRank News Feature</b> </font>
 				</a> (29 October 2023) <br>
+			</div>
+		</div>
+		<hr>
+
+		<!-- MathVerse -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/arxiv24_mathverse.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b>
+					<font color="black">
+						MathVerse: Does Your Multi-modal LLM Truly See the Diagrams in Visual Math Problems?
+					</font>
+				</b><br>
+				Renrui Zhang, Dongzhi Jiang, Yichi Zhang, Haokun Lin, Ziyu Guo, Pengshuo Qiu, Aojun Zhou, <b>Pan Lu</b>, Kai-Wei Chang, Peng Gao, Hongsheng Li
+				<br>
+				<b><a href="https://arxiv.org/abs/2403.14624" target="_blank">arXiv:2403.14624&nbsp;</a></b>
+				<a href="https://mathverse-cuhk.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="https://arxiv.org/abs/2403.14624" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://arxiv.org/pdf/2403.14624.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://github.com/ZrrSkywalker/MathVerse" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="https://huggingface.co/datasets/AI4Math/MathVerse" target="_blank"> <small>[Data]&nbsp;</small></a>
+				<a href="https://mathverse-cuhk.github.io/#visualization" target="_blank"> <small>[Visualization]&nbsp;</small></a>
+				<a href="https://twitter.com/_akhaliq/status/1771019526265618889" target="_blank"> <small>[Coverage]&nbsp;</small></a>
+				<a href="https://huggingface.co/papers/2403.14624" target="_blank"> <small>[Daily Papers]&nbsp;</small></a>
+				<a href="bibs/arxiv24_mathverse.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div>
 		<hr>
