--- a/index.html
+++ b/index.html
@@ -212,6 +212,11 @@
 			<ul>
 				<li>
 					<strong>[03/2024]&nbsp; <font color="red">New!</font></strong>
+					I am co-organizing the <b><a href="https://sites.google.com/view/ai4mathworkshopicml2024" target="_blank">AI for Math</a></b>
+					Workshop at <b><a href="https://cvpr.thecvf.com/" target="_blank">CVPR 2024</a></b>. See you in Vienna!
+				</li>
+				<li>
+					<strong>[03/2024]&nbsp; <font color="red">New!</font></strong>
 					A paper on visual math reasoning with Multi-modal LLMs is available at
 					<b><a href="https://arxiv.org/abs/2403.14624" target="_blank">Preprint</a></b>.
 				</li>
@@ -1461,6 +1466,11 @@
 			<ul>
 				<li>
 					<strong>Co-organizer</strong>, Workshop on
+					<a href="https://sites.google.com/view/ai4mathworkshopicml2024" target="_blank">AI for Math</a> 
+					at ICML 2024
+				</li>
+				<li>
+					<strong>Co-organizer</strong>, Workshop on
 					<a href="https://sites.google.com/view/tavi-cvpr24/" target="_blank">Tool-Augmented VIsion (TAVI)</a> 
 					at CVPR 2024
 				</li>
@@ -1488,7 +1498,7 @@
 			</ul>
 			<h4 id="Service" style="">Program Committee Member</h4>
 				<ul>
-					<li> <strong>2024</strong>: ICLR, CVPR, COLM, ARR, SIGKDD</li>
+					<li> <strong>2024</strong>: ICLR, ICML, CVPR, COLM, ARR, SIGKDD</li>
 					<li> <strong>2023</strong>: NeurIPS, ICLR, ACL, EMNLP, AAAI</li>
 					<li> <strong>2022</strong>: NeurIPS, ICLR, CVPR, AAAI,
 						COLING</li>
