--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 				<li>
 					<strong>[03/2024]&nbsp; <font color="red">New!</font></strong>
 					I am co-organizing the <b><a href="https://sites.google.com/view/ai4mathworkshopicml2024" target="_blank">AI for Math</a></b>
-					Workshop at <b><a href="https://cvpr.thecvf.com/" target="_blank">CVPR 2024</a></b>. See you in Vienna!
+					Workshop at <b><a href="https://icml.cc/Conferences/2024" target="_blank">ICML 2024</a></b>. See you in Vienna!
 				</li>
 				<li>
 					<strong>[03/2024]&nbsp; <font color="red">New!</font></strong>
